--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: "Lato", sans-serif;
+  width: 100%;
 }
 
 h2 {
@@ -32,18 +33,21 @@ section.alternate-background {
 
 main img {
   width: 100%;
+  height: auto;
 }
-
-/* ---  Groups & Items --- */
 
 .group {
   display: flex;
   flex-direction: column;
 }
 
+.col {
+  align-items: center;
+}
+
 .item {
   flex: 1;
-  margin:10px;
+  margin: 10px;
 }
 
 .item-double {
@@ -54,8 +58,9 @@ main img {
 
 header {
   background-color: #ff385c;
-  padding: 20px 20px 20px 20px;
+  padding: 20px 20px 0 20px;
   text-align: center;
+  margin-bottom: 40px;
 }
 
 .logo {
@@ -64,13 +69,20 @@ header {
   color: #fff;
 }
 
-header nav ul {
+header nav {
   display: flex;
   justify-content: center;
 }
 
+header nav ul {
+  display: flex;
+  padding-left: 0;
+  list-style: none;
+}
+
 header nav ul li {
   list-style-type: none;
+  font-size: x-large;
 }
 
 header nav ul li a {
@@ -80,7 +92,8 @@ header nav ul li a {
 }
 
 header nav ul li:last-child a {
-  margin-right: 20px;
+  margin-right: 0;
+  padding-right: 0;
 }
 
 header nav ul li a:hover {
@@ -89,10 +102,8 @@ header nav ul li a:hover {
 }
 
 /* -------  Search Form ------- */
+
 form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   border: 2px solid #ff385c;
   padding: 10px;
 }
@@ -101,11 +112,9 @@ form label {
   font-weight: bold;
 }
 
-form select,
-form input {
+form select, form input {
   margin-bottom: 20px;
-  width: 65%;
-  float: right;
+  width: 180px;
 }
 
 form button {
@@ -115,6 +124,23 @@ form button {
   font-size: 24px;
   padding: 15px;
   width: 100%;
+}
+
+.date::placeholder {
+  color: black;
+}
+
+.space-between {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+/* ------- Ideas ------- */
+
+.col2 {
+  flex-direction: column;
+  align-items: center;
 }
 
 /* -------  Footer ------- */
@@ -129,56 +155,74 @@ footer p {
   padding: 20px;
 }
 
-/* -------  Media Query ------- */
+/* -------  Media Query for Desktop ------- */
 
-@media all and (min-width: 600px) {
+/* *** media query for header */
+
+@media all and (min-width: 480px) {
   header {
-    background-color: #ff385c;
+    /* Changes the default setting from `block` to `flex`. */
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-  }
-
-  header nav {
-    padding: 10px;
-  }
-
-  form {
-    flex-direction: row;
-  }
-
-  .group {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-flow: row nowrap;
     align-items: center;
   }
+  header nav {
+    align-items: center;
+    justify-content: center;
+  }
+  header nav ul li a:hover {
+    color: #bdbdbd;
+  }
+  .logo {
+    font-size: 30px;
+    justify-content: center;
+  }
+}
 
-  .vacation-form .item {
-    display: flex block;
-    flex: 1 1 auto;
+/* rule for Form area */
+
+@media all and (min-width: 1200px) {
+  .form-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .space-between {
+    display: flex;
     flex-direction: column;
+    margin-right: 40px;
   }
-
-  .item label
-  , .item input 
-  , .item select 
-  , .item button{
+  .button-container {
     display: flex;
-    width: 100%
+    justify-content: flex-end;
   }
+}
 
-  .grid-column {
+/* rule for About section */
+
+@media all and (min-width: 750px) {
+  .col {
     display: flex;
-    flex: 1;
-    flex-direction: column; 
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+  .padding {
     margin: 10px;
   }
+}
 
-  .grid-row {
+/* rule for Ideas section */
+
+@media all and (min-width: 750px) {
+  .picture-grid {
     display: flex;
-    flex: 1;
-    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .col2 {
+    flex: 1 0 calc(35% - 20px);
+    margin: 5px;
+  }
+  .padding {
+    margin: 10px;
   }
 }
