--- a/style.css
+++ b/style.css
@@ -1,228 +1,258 @@
-/* -------  General Styles ------- */
+/* ------- General Styles ------- */
 
 body {
-  font-family: "Lato", sans-serif;
-  width: 100%;
+ font-family: "Lato", sans-serif;
 }
 
 h2 {
-  font-size: 26px;
-  font-weight: 400;
-  margin: 0 10px 10px 10px;
-  text-align: center;
+ font-size: 34px;
+ font-weight: 500;
+ margin: 0 10px 10px 10px;
+ text-align: center;
 }
 
 h3 {
-  font-size: 18px;
-  font-weight: 500;
+ font-size: 22px;
+ font-weight: 550;
 }
 
 p {
-  line-height: 1.5em;
-  margin: 0;
+ line-height: 1.5em;
+ margin: 0;
 }
 
 section {
-  padding: 20px;
+ padding: 20px;
 }
 
 section.alternate-background {
-  background-color: #00a699;
-  color: #fff;
+ background-color: #00a699;
+ color: #fff;
 }
 
+/* Responsive Images */
 main img {
-  width: 100%;
-  height: auto;
+ width: 100%;
 }
+
+/* --- Groups & Items --- */
 
 .group {
-  display: flex;
-  flex-direction: column;
+ display: flex;
+ flex-direction: column;
+ justify-content: space-evenly;
 }
 
-.col {
-  align-items: center;
+.form-group {
+ display: flex;
+ flex-direction: row;
+ justify-content: space-between;
 }
 
-.item {
-  flex: 1;
-  margin: 10px;
+.form-item {
+ flex: 1;
+ margin: 12px 5px;
 }
 
-.item-double {
-  flex: 2;
+.about-item {
+ flex: 1;
+ margin: 12px;
 }
 
-/* -------  Navigation ------- */
+.ideas-item {
+ flex: 1;
+ margin: 12px;
+}
+
+.host-item {
+ flex: 1;
+ margin: 12px;
+}
+
+/* ------- Navigation ------- */
 
 header {
-  background-color: #ff385c;
-  padding: 20px 20px 0 20px;
-  text-align: center;
-  margin-bottom: 40px;
+ background-color: #ff385c;
+ padding: 20px 20px 0 20px;
+ text-align: center;
 }
 
 .logo {
-  font-family: "Pangolin", cursive;
-  font-size: 50px;
-  color: #fff;
+ font-family: "Pangolin", cursive;
+ font-size: 72px;
+ color: #fff;
+ text-align: center;
 }
 
 header nav {
-  display: flex;
-  justify-content: center;
+ display: flex;
+ justify-content: center;
 }
 
 header nav ul {
-  display: flex;
-  padding-left: 0;
-  list-style: none;
+ display: flex;
+ justify-content: center;
 }
 
 header nav ul li {
-  list-style-type: none;
-  font-size: x-large;
+ list-style-type: none;
 }
 
 header nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  padding: 0 20px 0 0;
-}
-
-header nav ul li:last-child a {
-  margin-right: 0;
-  padding-right: 0;
+ color: #fff;
+ text-decoration: none;
+ padding: 0 20px 0 0;
+ font-size: 20px;
 }
 
 header nav ul li a:hover {
-  color: #bdbdbd;
-  text-decoration: none;
+ color: #bdbdbd;
+ text-decoration: none;
 }
 
-/* -------  Search Form ------- */
-
+/* ------- Search Form ------- */
 form {
-  border: 2px solid #ff385c;
-  padding: 10px;
+ border: 2px solid #ff385c;
+ padding: 10px;
+ margin: 0 10px;
 }
 
 form label {
-  font-weight: bold;
+ font-weight: bold;
 }
 
-form select, form input {
-  margin-bottom: 20px;
-  width: 180px;
+form select,
+form input {
+ margin-bottom: 20px;
+ width: 180px;
 }
 
 form button {
-  background-color: #ff385c;
-  border: none;
-  color: #fff;
-  font-size: 24px;
-  padding: 15px;
-  width: 100%;
+ background-color: #ff385c;
+ border: none;
+ color: #fff;
+ font-size: 34px;
+ padding: 12px;
+ margin-top: 20px 10 px 10 px 10 px;
+ width: 100%;
 }
 
-.date::placeholder {
-  color: black;
-}
-
-.space-between {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-/* ------- Ideas ------- */
-
-.col2 {
-  flex-direction: column;
-  align-items: center;
-}
-
-/* -------  Footer ------- */
+/* ------- Footer ------- */
 
 footer {
-  background-color: #ff385c;
+ background-color: #ff385c;
 }
 
 footer p {
-  color: #fff;
-  text-align: center;
-  padding: 20px;
+ color: #fff;
+ text-align: center;
+ padding: 20px;
 }
 
-/* -------  Media Query for Desktop ------- */
+/* ------- Media Query ------- */
 
-/* *** media query for header */
+@media all and (min-width: 680px) {
 
-@media all and (min-width: 480px) {
-  header {
-    /* Changes the default setting from `block` to `flex`. */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  header nav {
-    align-items: center;
-    justify-content: center;
-  }
-  header nav ul li a:hover {
-    color: #bdbdbd;
-  }
-  .logo {
-    font-size: 30px;
-    justify-content: center;
-  }
+ /* Header */
+ header {
+ display: flex;
+ flex-direction: row;
+ justify-content: space-between;
+ padding: 0 30px;
+ }
+
+ .logo {
+ margin: 14px 0;
+ padding-top: 0;
+ }
+
+ header nav {
+ margin-top: 30px;
+ }
+
+ /* Form */
+
+ .desktop-form-group {
+ display: flex;
+ flex-direction: row;
+ justify-content: space-evenly;
+ flex-wrap: wrap;
+ align-content: center;
+ padding: 0 8px;
+ }
+
+ .form-group {
+ /* Group style for the label and input */
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ /* Style for the label and input as one item */
+ flex: 1;
+ align-self: center;
+ }
+
+ /* Style for the label and input as individual items */
+ .form-item {
+ flex: 1;
+ margin: 0; 
 }
 
-/* rule for Form area */
-
-@media all and (min-width: 1200px) {
-  .form-container {
-    display: flex;
-    justify-content: space-between;
-  }
-  .space-between {
-    display: flex;
-    flex-direction: column;
-    margin-right: 40px;
-  }
-  .button-container {
-    display: flex;
-    justify-content: flex-end;
-  }
+form button {
+ margin: 8px 0;
 }
 
-/* rule for About section */
-
-@media all and (min-width: 750px) {
-  .col {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-  }
-  .padding {
-    margin: 10px;
-  }
+.button-item {
+ flex: 1;
 }
 
-/* rule for Ideas section */
+/* About */
 
-@media all and (min-width: 750px) {
-  .picture-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  .col2 {
-    flex: 1 0 calc(35% - 20px);
-    margin: 5px;
-  }
-  .padding {
-    margin: 10px;
-  }
+.desktop-about-group {
+ display: flex;
+ flex-direction: row;
+ justify-content: space-evenly;
+ align-items: center;
+ flex-wrap: wrap;
+ align-content: space-evenly;
+}
+
+.about-item {
+ flex: 1;
+ margin: 10px;
+}
+
+/* Sets the paragraph as twice the size of each img item */
+.double-item {
+ flex: 2;
+}
+
+/* Ideas */
+.desktop-ideas-group {
+ display: flex;
+ flex-direction: row;
+ margin-top: 0;
+}
+
+.ideas-item {
+ flex: 0 50%;
+ margin: 10px;
+}
+
+.ideas h2 {
+ margin-bottom: 0px;
+}
+
+/* Host */
+.desktop-host-group {
+ display: flex;
+ flex-direction: row;
+ justify-content: space-evenly;
+ align-items: center;
+}
+
+.host-item {
+ flex: 1;
+ margin: 10px
+}
+
 }
