--- a/style.css
+++ b/style.css
@@ -1,258 +1,230 @@
-/* ------- General Styles ------- */
+/* -------  General Styles ------- */
 
 body {
- font-family: "Lato", sans-serif;
+  font-family: "Lato", sans-serif;
+  display: grid;
 }
 
 h2 {
- font-size: 34px;
- font-weight: 500;
- margin: 0 10px 10px 10px;
- text-align: center;
+  font-size: 26px;
+  font-weight: 400;
+  margin: 0 10px 10px 10px;
+  text-align: center;
 }
 
 h3 {
- font-size: 22px;
- font-weight: 550;
+  font-size: 18px;
+  font-weight: 500;
 }
 
 p {
- line-height: 1.5em;
- margin: 0;
+  line-height: 1.5em;
+  margin: 0;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 section {
- padding: 20px;
+  padding: 20px;
 }
 
 section.alternate-background {
- background-color: #00a699;
- color: #fff;
+  background-color: #00a699;
+  color: #fff;
 }
 
-/* Responsive Images */
 main img {
- width: 100%;
+  width: 100%;
 }
 
-/* --- Groups & Items --- */
+.about-img {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.host-img {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+/* ---  Groups & Items --- */
 
 .group {
- display: flex;
- flex-direction: column;
- justify-content: space-evenly;
+  display: flex;
+  flex-direction: column;
 }
 
-.form-group {
- display: flex;
- flex-direction: row;
- justify-content: space-between;
+.item {
+  flex: 1;
+  margin: 10px;
 }
 
-.form-item {
- flex: 1;
- margin: 12px 5px;
+.item-double {
+  flex: 2;
+  margin: 10px;
 }
 
-.about-item {
- flex: 1;
- margin: 12px;
-}
-
-.ideas-item {
- flex: 1;
- margin: 12px;
-}
-
-.host-item {
- flex: 1;
- margin: 12px;
-}
-
-/* ------- Navigation ------- */
+/* -------  Navigation ------- */
 
 header {
- background-color: #ff385c;
- padding: 20px 20px 0 20px;
- text-align: center;
+  background-color: #ff385c;
+  padding: 30px 30px 0 20px;
+  text-align: center;
 }
 
 .logo {
- font-family: "Pangolin", cursive;
- font-size: 72px;
- color: #fff;
- text-align: center;
-}
-
-header nav {
- display: flex;
- justify-content: center;
+  display: flex;
+  font-family: "Pangolin", cursive;
+  font-size: 64px;
+  color: #7A7978;
+  justify-content: center;
 }
 
 header nav ul {
- display: flex;
- justify-content: center;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
 }
 
 header nav ul li {
- list-style-type: none;
+  list-style-type: none;
 }
 
 header nav ul li a {
- color: #fff;
- text-decoration: none;
- padding: 0 20px 0 0;
- font-size: 20px;
+  color: #7A7978;
+  padding: 0 20px 0 0;
+  text-decoration: none;
 }
 
 header nav ul li a:hover {
- color: #bdbdbd;
- text-decoration: none;
+  color: #90FFDC;
+  text-decoration: underline;
 }
 
-/* ------- Search Form ------- */
+/* -------  Search Form ------- */
+
 form {
- border: 2px solid #ff385c;
- padding: 10px;
- margin: 0 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 2px solid #ff385c;
+  padding: 10px;
 }
 
 form label {
- font-weight: bold;
+  font-weight: bold;
+  padding-right: 10px;
 }
 
-form select,
-form input {
- margin-bottom: 20px;
- width: 180px;
+form button:hover {
+    color: #7A7978;
+  text-decoration: none;
 }
 
 form button {
- background-color: #ff385c;
- border: none;
- color: #fff;
- font-size: 34px;
- padding: 12px;
- margin-top: 20px 10 px 10 px 10 px;
- width: 100%;
+  background-color: #ff385c;
+  border: none;
+  color: #fff;
+  font-size: 24px;
+  padding: 15px;
+  width: 100%;
 }
 
-/* ------- Footer ------- */
+.form-input {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* -------  Footer ------- */
 
 footer {
- background-color: #ff385c;
+  background-color: #ff385c;
 }
 
 footer p {
- color: #fff;
- text-align: center;
- padding: 20px;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
 }
 
-/* ------- Media Query ------- */
+/* -------  Media Query ------- */
+
+
+/* -------  General Styles ------- */
 
 @media all and (min-width: 480px) {
+  header {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 15px;
+  }
+  
+  .logo {
+    font-size: 48px;
+    padding-left: 5px;
+  }
 
- /* Header */
- header {
- display: flex;
- flex-direction: row;
- justify-content: space-between;
- padding: 0 30px;
- }
+  /* -------  Search Form ------- */
 
- .logo {
- margin: 14px 0;
- padding-top: 0;
- }
+  form {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 10px 10px 10px 10px;
+  }
 
- header nav {
- margin-top: 30px;
- }
+  form div {
+    display: flex;
+    flex-direction: column;
+  }
 
- /* Form */
+  form label {
+    padding-bottom: 15px;
+    font-weight: bold;
+  }
 
- .desktop-form-group {
- display: flex;
- flex-direction: row;
- justify-content: space-evenly;
- flex-wrap: wrap;
- align-content: center;
- padding: 0 8px;
- }
+  .form-input {
+    padding-right: 15px;
+    justify-content: center;
+  }
 
- .form-group {
- /* Group style for the label and input */
- display: flex;
- flex-direction: column;
- justify-content: center;
- /* Style for the label and input as one item */
- flex: 1;
- align-self: center;
- }
+  button {
+    justify-content: center;
+  }
 
- /* Style for the label and input as individual items */
- .form-item {
- flex: 1;
- margin: 0; 
-}
+  /* -------  Groups & Items------- */
 
-form button {
- margin: 8px 0;
-}
+  .group {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+  }
 
-.button-item {
- flex: 1;
-}
+  .item button,
+  .item input,
+  .item label,
+  .item select {
+    display: flex;
+    width: 100%;
+  }
 
-/* About */
+  .item {
+    flex: 1;
+    margin: 15px;
+  }
 
-.desktop-about-group {
- display: flex;
- flex-direction: row;
- justify-content: space-evenly;
- align-items: center;
- flex-wrap: wrap;
- align-content: space-evenly;
-}
+  .item-double {
+    flex: 2;
+    margin: 15px;
+  }
 
-.about-item {
- flex: 1;
- margin: 10px;
-}
-
-/* Sets the paragraph as twice the size of each img item */
-.double-item {
- flex: 2;
-}
-
-/* Ideas */
-.desktop-ideas-group {
- display: flex;
- flex-direction: row;
- margin-top: 0;
-}
-
-.ideas-item {
- flex: 0 50%;
- margin: 10px;
-}
-
-.ideas h2 {
- margin-bottom: 0px;
-}
-
-/* Host */
-.desktop-host-group {
- display: flex;
- flex-direction: row;
- justify-content: space-evenly;
- align-items: center;
-}
-
-.host-item {
- flex: 1;
- margin: 10px
-}
-
+  p {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
