--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ header {
   display: flex;
   font-family: "Pangolin", cursive;
   font-size: 64px;
-  color: #7A7978;
+  color: #fff;
   justify-content: center;
 }
 
