--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ header nav ul li {
 }
 
 header nav ul li a {
-  color: #7A7978;
+  color: #fff;
   padding: 0 20px 0 0;
   text-decoration: none;
 }
